일일 작업 완료

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,7 @@
     }],
     "react/prop-types": "off",
     // suppress errors for missing 'import React' in files
-    "react/react-in-jsx-scope": "off",
+    "react/react-in-jsx-scope": "warn",
     "no-var": "error",
     "no-dupe-keys": "error"
   }
