--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
     "antd": "^4.5.3",
+    "axios": "^0.19.2",
+    "immer": "^7.0.7",
     "next": "9.5.1",
+    "next-redux-wrapper": "^6.0.2",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
