--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@ant-design/icons": "^4.2.2",
     "antd": "^4.5.3",
     "axios": "^0.19.2",
+    "connected-next-router": "^3.1.0",
+    "history": "^5.0.0",
     "immer": "^7.0.7",
     "next": "9.5.1",
     "next-redux-wrapper": "^6.0.2",
