--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "antd": "^4.5.3",
     "axios": "^0.19.2",
     "connected-next-router": "^3.1.0",
+    "dayjs": "^1.8.34",
     "history": "^5.0.0",
     "immer": "^7.0.7",
     "next": "9.5.1",
     "next-redux-wrapper": "^6.0.2",
     "react": "16.13.1",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "16.13.1",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
